# SPQSP_PDAC

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
.github/workflows/: docker-build.yml
PDAC/abm/: gpu_param.cu  gpu_param.h
PDAC/agents/: cancer_cell.cuh  fibroblast.cuh  macrophage.cuh  mdsc.cuh  t_cell.cuh  t_reg.cuh  vascular_cell.cuh
PDAC/core/: ParamBase.cpp  common.cuh  model_functions.cu  model_functions.cuh
PDAC/pde/: pde_integration.cu  pde_integration.cuh  pde_solver.cu  pde_solver.cuh
PDAC/qsp/: LymphCentral_wrapper.cpp  LymphCentral_wrapper.h  qsp_integration.cu
PDAC/qsp/cvode/: CVODEBase.cpp  CVODEBase.h
PDAC/qsp/ode/: ODE_system.cpp  ODE_system.h
PDAC/sim/: BENCHMARK_HPC.md  CMakeLists.txt  Dockerfile  Dockerfile.benchmark  PARALLELIZATION_FAILURE_ANALYSIS.md  analyze_benchmark.py  benchmark_io.sh  build.sh  cloud_benchmark_setup.sh  docker_entrypoint.sh  initialization.cu  initialization.cuh  main.cu  model_definition.cu  model_layers.cu
PDAC/sim/resource/: param_all_test.xml
SP_QSP_shared/ABM_Base/: AgentGridVoxel.d  BaseAgent.d  CellAgent.cpp  CellAgent.d  CellAgent.h  Coord3D.d  Coord3D_f.cpp  Coord3D_f.d  Coord3D_f.h  Graph3D.cpp  Graph3D.d  Graph3D.h  ParamBase.d  RNG.cpp  RNG.d  RNG.h  ShapeBase.d  SpatialCompartment.cpp  SpatialCompartment.d  SpatialCompartment.h  StatsBase.d
SP_QSP_shared/Numerical_Adaptor/BioFVM/: BioFVMGrid.cpp  BioFVMGrid.d  BioFVMGrid.h
SP_QSP_shared/Numerical_Adaptor/CVODE/: CVODEBase.d
python/: HCC_check_ABM.ipynb  PDAC_outputs.ipynb  TNBC_outputs.ipynb  compare_hcc_pdac.py
